# molpot

./: .gitignore  Dockerfile  README.md  baseline_qdpi_model.pth  best_qdpi_model.pth  check_qdpi_urls.py  fast_qdpi_model.pth  mkdocs.yml  molcrafts.def  optimized_qdpi_results.pth  pyproject.toml  test_tensordict.ipynb  train_drug_discovery.py
.cursor/rules/: train.mdc
.devcontainer/CPU/: devcontainer.json
.devcontainer/CUDA/: devcontainer.json
.devcontainer/cpu/: devcontainer.json
.devcontainer/cuda/: devcontainer.json
.github/: build_dev_image.yaml  release.yaml
.github/workflow/: deploy_doc.yaml
.github/workflows/: build_image.yaml  pypi_release.yaml
docs/: index.md  readmap.md
docs/start/: engine.md  index.md  model.md  pipeline.md  td.md
examples/: benchmark_nblist.ipynb  config_workflow.ipynb  dataset.ipynb  inspect_model.py  launch.py  md.ipynb  md17.ipynb  pot_training.ipynb  reweighting.ipynb  rmd17.ipynb  train_lj.py  train_pinet.py  train_potential.ipynb  train_qm9.py  train_rmd17.py  train_with_config.py
examples/md/: md.ipynb
examples/pinet2-rmd17/tb/: events.out.tfevents.1734358818.6037c8dfacd4.13247.0  events.out.tfevents.1734358954.6037c8dfacd4.13247.1
examples/pinet_rmd17/: events.out.tfevents.1731438259.alvis2-03.2158135.2
examples/potential/: basic.ipynb
examples/potential/tblog/: events.out.tfevents.1741636500.0363db49e12f.8072.0  events.out.tfevents.1741636635.0363db49e12f.8072.1  events.out.tfevents.1741636696.0363db49e12f.9319.0
saved/: config.json
src/: cli.py
src/configs/: keywords.py
src/data/: dataproxy.py  dataset.py
src/molpot/: __init__.py  _alias.py  _config.py  _device.py  alias.py  cli.py  config.py  log.py  logging.py  unit.py
src/molpot/app/: __init__.py  app.py  base.py  config.py  config_parser.py  config_template.json  parse_json.py  potentials.py  train_potential.py  trainer_creator.py  utils.py
src/molpot/cli/: __init__.py  app.py  config.py  log.py  main.py  train.py  utils.py
src/molpot/configs/: __init__.py  alias.py  keywords.py
src/molpot/constrain/: __init__.py  base.py
src/molpot/data/: __init__.py  dataproxy.py  datareader.py  dataset.py  datasets.py  pipeline.py  piplines.py
src/molpot/engine/: __init__.py  base.py  loss.py  md.py  metric.py  trainer.py  utils.py
src/molpot/engine/fix/: __init__.py  base.py  ckpt.py  metrices.py  stop.py  tensorboard.py  valid.py
src/molpot/engine/loss/: __init__.py
src/molpot/engine/md/: __init__.py  engine.py  event.py  events.py  handler.py  initializer.py  integrator.py  main.py  neighborlist.py  output.py  utils.py
src/molpot/engine/potential/: __init__.py  trainer.py  utils.py
src/molpot/inspector/: __init__.py  data.py  dataInspector.py  enums.py  formatting.py  inspector.py  layer_info.py  model.py  model_statistics.py  potential.py  profiler.py
src/molpot/irrep/: __init__.py  irrep.py  linalg.py  perm.py  rotation.py  sph_har.py  wigner.py
src/molpot/metric/: __init__.py  loss.py
src/molpot/pipeline/: __init__.py  dataloader.py  dataset.md  dataset.py  md.py  qdpi.py  qm9.py  rmd17.py  train_qdpi.py
src/molpot/pipeline/process/: atomic_dress.py  base.py  nblist.py  utils.py
src/molpot/pipeline/tests/: test_dataset.py  test_qdpi.py  (+1 more)
src/molpot/pipline/: __init__.py  collators.py  dataloader.py  dataloaders.py  dataset.py  engine.py  locality.py  nblist.py  process.py  readers.py
src/molpot/piplines/: __init__.py  collators.py  dataloaders.py  dataset.py  datasets.py  device.py  nblists.py  process.py  readers.py  typifier.py
src/molpot/potential/: __init__.py  base.py
src/molpot/potentials/: __init__.py  base.py
src/molpot/process/: __init__.py  atomic_dress.py  base.py  nblist.py  process.py
src/molpot/statistic/: tracker.py
src/molpot/train/: __init__.py  trainer.py
src/molpot/trainer/: __init__.py  _trainer.py  distributed.py  fix.py  log.py  loss.py  trainer.py  utils.py
src/molpot/transforms/: __init__.py  base.py  distance.py  neighborlist.py
src/molpot/utils/: __init__.py  batchtools.py  box.py  element.py  forcefield.py  frame.py  locality.py  neighbors.py  random.py  system.py  units.py
src/op/: .CMakeLists.txt.swp  CMakeCache.txt  CMakeLists.txt  CTestTestfile.cmake  Makefile  citations.md  cmake_install.cmake  install_manifest.txt
src/op/binding/: __init__.py
src/op/binding/locality/: __init__.py
src/op/binding/locality/neighbors/: __init__.py  get_neighbor_pairs.py
src/op/binding/pot/: __init__.py  pme.py
src/op/binding/scatter/: __init__.py  scatter.py  scatter_fn.py  segment_coo.py  segment_csr.py  utils.py
src/op/src/locality/neighbor/: get_neighbor_pairs.cpp  get_neighbor_pairs.cu  neighbors.cpp
src/op/src/locality/neighbors/: get_neighbor_pairs.cpp  get_neighbor_pairs.cu  neighbors.cpp
src/op/src/pot/pme/: pme.cpp  pme_cpu.cpp  pme_cuda.cu
src/op/src/scatter/: scatter.cpp  segment_coo.cpp  segment_csr.cpp  version.cpp
src/op/src/scatter/cpu/: scatter_cpu.cpp  segment_coo_cpu.cpp  segment_csr_cpu.cpp
src/op/src/scatter/cuda/: scatter_cuda.cu  segment_coo_cuda.cu  segment_csr_cuda.cu
src/op/tests/python/test_locality/: test_get_neighbor_pairs.py
src/op/tests/python/test_pot/: test_pme.py
src/op/tests/python/test_scatter/: test_boardcast.py  test_scatter.py  test_scatter_sum.py  test_segment.py  utils.py
src/transforms/: base.py  neighborlist.py
tests/: conftest.py  test_alias.py  test_keywords.py  test_unit.py
tests/test_dataset/: test_qm9.py
tests/test_irrep/: test_wigner.py
tests/test_pipeline/: test_collate.py  test_dataloader.py  test_nblist.py  test_process.py
tests/test_potential/: test_base.py  test_forcefield.py
tests/test_potential/test_nnp/: test_layer.py  test_pinet.py  test_readout.py  utils.py
tests/test_potentials/test_nnp/: test_eqvar.py  test_layer.py  test_pinet.py  utils.py
tests/test_statistic/: test_tracker.py
tests/test_trainer/: test_trainer.py
tests/test_transform/: test_nblist.py
tests/test_utils/: test_forcefield.py
tutorials/: 1_pipeline.ipynb  2_train_nnp.ipynb  3_train_classic.ipynb  4_reweighting.ipynb
(+98 files in other folders)
